# precis-finance-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  constraints-extras.txt  mkdocs.yml  pyproject.toml  server.json
.github/workflows/: ci.yml  docs.yml  registry.yml  release.yml
deploy/: .env.example  docker-compose.local.yml  docker-compose.yml
deploy/backup/: precis_backup_disk.xml
deploy/caddy/: Caddyfile  Dockerfile
deploy/keycloak/: reconcile.py
deploy/nginx/: mcp.precis.finance.conf
docs/: CNAME  README.md  index.md  llms.txt  robots.txt
docs/assets/: extra.css
docs/configuration/: adding-metrics-and-dimensions.md  catalogue-and-semantic.md  clickhouse-schema-contract.md  environment-variables.md  ingestion.md  user-profiles.md
docs/deployment/: clickhouse-data-modes.md  external-idp-recipes.md  keycloak-brokering.md  oauth-keycloak.md  production-checklist.md  security-model.md
docs/development/: adding-read-tools.md
docs/excel/: functions.md  index.md
docs/getting-started/: concepts.md  quickstart.md
docs/operations/: backups.md  observability.md  onboarding-ingestion.md  rotating-credentials.md  troubleshooting.md  upgrades.md
docs/reference/: mcp-tools.md
excel-addin/: manifest.xml
excel-addin/src/: mcp.ts
instance/: backup.yml  scenarios.yml
instance/catalogue/: dimensions.yml  gl.yml  gl_federated.yml  intercompany.yml  payroll.yml  pipeline.yml  plan_datasets.yml  planning_context.yml  pnl.yml  projects.yml  statements.yml  timesheets.yml  worklog_federated.yml
instance/live/: dim_account.sql  dim_client.sql  dim_cost_centre.sql  dim_crm_account.sql  dim_date.sql  dim_employee.sql  dim_period.sql  dim_project.sql  dim_week.sql  fact_gl.sql  fact_intercompany.sql  fact_payroll.sql  fact_pipeline.sql  fact_plan.sql  fact_revenue_subledger.sql  fact_timesheets.sql  portfolio_edges.sql  portfolio_nodes.sql
keycloak/: realm-export.json
mock_profiles/: 01_cfo_full_access.yml  02_fpa_lead.yml  03_cloud_planner.yml  04_software_eng_manager.yml  05_external_auditor.yml  06_hr_director.yml  07_overlay_carve_out.yml  08_specificity_override.yml  09_multi_dim_and.yml  10_invalid_examples.yml  README.md
precis_mcp/: admin_cli.py  admin_ops.py  app_open.py  auth.py  auth_mode.py  catalogue_ref.py  catalogue_sections.py  cell_format.py  clickhouse_init.py  db.py  dispatch.py  http_auth.py  inspection_grid_builder.py  keycloak_admin.py  observability.py  oidc.py  read_tool_hooks.py  scope_resolver.py  secrets.py  server.py  table_builder.py
precis_mcp/backup/: __init__.py  ch_render.py  config.py  destination.py  history.py  manifest.py  notify.py  ops.py  prune.py  restore.py  runner.py  scheduler_daemon.py
precis_mcp/engine/: __init__.py  catalogue.py  context_validation.py  filter_resolver.py  formatter.py  ibis_registry.py  ibis_retriever.py  inspect.py  passthrough_views.py  period_codes.py  query_extensions.py  ragged_views.py  resolver.py  retriever.py  scenario_registry.py  scenario_store.py  scope_enforcer.py  transformer.py  types.py
precis_mcp/ingestion/: __init__.py  admin_routes.py  binding_auth.py  checks.py  ibis_backends.py  ibis_executor.py  live_ddl_runner.py  load_history.py  metrics.py  object_store.py  orchestrator.py  period_inference.py  period_selection.py  pg_lock.py  registry.py  run_routes.py  scenario_runner.py  scheduler.py  scheduler_daemon.py  semantic_runner.py  swap.py  upload_routes.py  validate.py  watcher.py  watcher_daemon.py  wiring.py
precis_mcp/mcp_external/: __init__.py  discovery.py  excel_static.py  framing.py  instructions.py  mcp_external.md  oauth_proxy.py  server.py
precis_mcp/sample_data/: __init__.py  __main__.py  generate.py
precis_mcp/tools/: __init__.py  _dev_mcp.py  _mcp_register.py  ingestion_tools.py  read_tools.py
scripts/: add_license_headers.py  check_no_commercial_imports.py  deploy-mcp.sh  install-precis-mcp.sh  migrate.py  run_ingest_stage.py
tests/: conftest.py  open_tests.txt
tests/component/: test_admin_cli.py  test_app_open_lifespan.py  test_auth.py  test_backup_cli.py  test_backup_restore.py  test_backup_runner.py  test_connection_tls.py  test_engine_pipeline.py  test_filter_resolver.py  test_identity_resolution.py  test_ingestion_read_tools.py  test_ingestion_scheduler.py  test_inspect.py  test_load_history_writer.py  test_open_core_assembly.py  test_orchestrator.py  test_orchestrator_logging.py  test_orchestrator_observability.py  test_read_tools.py  test_run_endpoint.py  test_sample_data_landing.py  test_synthetic_data_crm.py  test_upload_endpoint.py  test_watcher.py
tests/e2e/: test_ingestion_e2e.py  test_landing_ddl_integration.py  test_load_history_migration_integration.py  test_mcp_oauth2_e2e.py  test_pg_advisory_lock_integration.py
tests/factories/: __init__.py  auth.py  ingestion.py
tests/fakes/: __init__.py  fake_clickhouse.py  fake_platform_db.py  fake_redis.py  ingestion.py  mock_mcp.py
tests/unit/: test_admin_ops.py  test_auth.py  test_auth_mode.py  test_backup_ch_render.py  test_backup_config.py  test_backup_manifest.py  test_backup_prune.py  test_catalogue.py  test_catalogue_ref.py  test_clickhouse_init.py  test_context_validation.py  test_engine_catalogue.py  (+29 more)
(+67 files in other folders)
